--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^4.3.2+4
+  ferry: ^0.9.2
+  gql_http_link: ^0.3.2
+  json_annotation: ^3.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -33,6 +36,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  ferry_generator: ^0.3.3
+  json_serializable: ^3.5.1
+  build_runner: ^1.10.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
