--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   ferry: ^0.9.2
   gql_http_link: ^0.3.2
   json_annotation: ^3.1.1
+  url_launcher: ^5.7.10
+  uni_links: ^0.4.0
+  http: ^0.12.2
 
 
   # The following adds the Cupertino Icons font to your application.
