--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ dependencies:
   url_launcher: ^5.7.10
   uni_links: ^0.4.0
   http: ^0.12.2
-
+  webview_flutter: ^1.0.7
+  webview_cookie_manager: ^1.0.7
+  html: ^0.14.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
