--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^4.3.2+4
-  ferry: ^0.9.2
-  gql_http_link: ^0.3.2
+  graphql_flutter: ^4.0.1
   json_annotation: ^3.1.1
   url_launcher: ^5.7.10
   uni_links: ^0.4.0
@@ -41,7 +40,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  ferry_generator: ^0.3.3
   json_serializable: ^3.5.1
   build_runner: ^1.10.2
 
