--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
               <category android:name="android.intent.category.BROWSABLE" />
               <data
                 android:scheme="flutterboilerplate"
-                android:host="login" />
+                android:host="episodeTopic" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
