--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   webview_flutter: ^1.0.7
   webview_cookie_manager: ^1.0.7
   html: ^0.14.0
+  flutter_hooks: ^0.18.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
