--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,15 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.3.2+4
-  graphql_flutter: ^4.0.1
-  json_annotation: ^3.1.1
-  url_launcher: ^5.7.10
-  uni_links: ^0.4.0
-  http: ^0.12.2
-  webview_flutter: ^1.0.7
-  webview_cookie_manager: ^1.0.7
-  html: ^0.14.0
+  provider: ^5.0.0
+  graphql_flutter: ^5.0.0
+  json_annotation: ^4.0.1
+  url_launcher: ^6.0.9
+  uni_links: ^0.5.1
+  http: ^0.13.3
+  webview_flutter: ^2.0.10
+  webview_cookie_manager: ^2.0.1
+  html: ^0.15.0
   flutter_hooks: ^0.18.0
 
   # The following adds the Cupertino Icons font to your application.
@@ -41,8 +41,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  json_serializable: ^3.5.1
-  build_runner: ^1.10.2
+  json_serializable: ^4.1.4
+  build_runner: ^2.0.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
