--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   webview_cookie_manager: ^2.0.1
   html: ^0.15.0
   flutter_hooks: ^0.18.0
+  flutter_baidu_mapapi_map: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
