--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_hooks: ^0.18.0
   flutter_baidu_mapapi_map: ^2.0.1
   geolocator: ^7.3.1
+  grpc: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
