feat: :sparkles: show weather infos

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,13 +8,15 @@
             "name": "flutter_boilerplate (dev)",
             "request": "launch",
             "type": "dart",
-            "program": "lib/main_dev.dart"
+            "program": "lib/main_dev.dart",
+            "args": ["--no-sound-null-safety"]
         },
         {
             "name": "flutter_boilerplate (prod)",
             "request": "launch",
             "type": "dart",
-            "program": "lib/main_prod.dart"
+            "program": "lib/main_prod.dart",
+            "args": ["--no-sound-null-safety"]
         }
     ]
 }
