--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,10 @@ flutter:
   uses-material-design: true
   assets:
     - images/
+  fonts:
+    - family: iconfont
+      fonts:
+        - asset: fonts/iconfont.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
