--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^1.0.0
   json_serializable: ^4.1.4
+  qlevar_router: ^1.5.2
   build_runner: ^2.1.1
 
 # For information on the generic Dart part of this file, see the
