--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^4.1.4
+  qlevar_router: ^1.5.2
   build_runner: ^2.1.1
 
 # For information on the generic Dart part of this file, see the
