--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:name="com.example.flutter_boilerplate.MyApplication"
         android:label="flutter_boilerplate"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/tv_055">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
