--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_baidu_mapapi_search: ^2.0.1
   geolocator: ^7.3.1
   grpc: ^3.0.0
+  rust_sdk:
+    path: ./packages/rust_sdk
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
