--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   provider: ^5.0.0
   graphql_flutter: ^5.0.0
-  json_annotation: ^4.0.1
+  json_annotation: ^4.5.0
   url_launcher: ^6.0.9
   uni_links: ^0.5.1
   http: ^0.13.3
@@ -35,6 +35,7 @@ dependencies:
   flutter_hooks: ^0.18.0
   flutter_baidu_mapapi_map: ^2.0.1
   flutter_baidu_mapapi_search: ^2.0.1
+  freezed_annotation: ^2.0.3
   geolocator: ^7.3.1
   grpc: ^3.0.0
   rust_sdk:
@@ -48,7 +49,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
-  json_serializable: ^4.1.4
+  freezed: ^2.0.3+1
+  json_serializable: ^6.2.0
   qlevar_router: ^1.5.2
   build_runner: ^2.1.1
 
