--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
+  cached_network_image: ^3.3.1
+  dio: ^5.4.0
   flutter:
     sdk: flutter
   provider: ^5.0.0
