--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,14 @@ dependencies:
   collection: ^1.17.1
   cached_network_image: ^3.3.1
   dio: ^5.4.0
+  drift: ^2.14.0
   flutter:
     sdk: flutter
   provider: ^5.0.0
   graphql_flutter: ^5.0.0
   json_annotation: ^4.5.0
   url_launcher: ^6.0.9
+  ulid: ^2.0.1
   uni_links: ^0.5.1
   http: ^0.13.3
   webview_flutter: ^4.2.2
@@ -60,6 +62,7 @@ dev_dependencies:
   freezed: ^2.0.3+1
   json_serializable: ^6.2.0
   qlevar_router: ^1.5.2
+  drift_dev: ^2.8.1
   build_runner: ^2.1.1
 
 # For information on the generic Dart part of this file, see the
